--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    height: 150px;
+    height: 130px;
     display: flex;
     align-items: center;
     z-index: 200;
@@ -9,10 +9,12 @@
     background-color: #000015;
 }
 .header__logo{
-    height: 150px;
+    height: 130px;
 }
 .header__icons{
     margin-left: 40px;
+    display: flex;
+    flex-direction: row;
 }
 .header__box{
     background-color: #000034;
@@ -22,9 +24,10 @@
     display: flex;
     flex-direction: column;
 }
-.header__home{
+.header__icon{
     color: #99afdd;
     padding: 10px;
+    align-items: center;
 }
 .header__text{
     color: white;
